# bukscs

./: .gitignore  .prettierrc  AGENTS.md  PROMPTS.md  db.sqlite3  package.json  pyproject.toml  tailwindcss.config.js
apps/clinic/: admin.py  apps.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
apps/clinic/migrations/: 0001_initial.py  0002_initial.py  0003_alter_patient_clinic_code_alter_patient_reg_number.py  0004_encounter_spo2_encounter_triage_notes_and_more.py  0005_alter_patient_options_encounter_checked_in_by_and_more.py  0006_patient_address_patient_email_patient_phone_number_and_more.py  0007_alter_patient_gender.py  0008_remove_prescription_dispensed_at_and_more.py
apps/clinic/templates/clinic/: base.html  doctor_detail.html  nurse_dashboard.html  profile.html  receptionist_dash.html  register.html  search.html  triage_detail.html  triage_list.html
apps/clinic/templates/doctor/: base.html  consultation.html  patient_details.html  patient_search.html  profile.html  queue.html
apps/clinic/templates/nurse/: base.html  capture_vitals.html  profile.html  queue.html
apps/clinic/templatetags/: clinic_tags.py
apps/pharmacy/: models.py  views.py
apps/pharmacy/migrations/: 0001_initial.py
apps/pharmacy/templates/pharmacy/: dashboard.html
apps/users/: admin.py  models.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_options_user_profile_photo_and_more.py
core/: celery.py  settings.py  urls.py
static/css/: output.css
templates/: base.html  login.html
templates/registration/: login.html
(+9 files in other folders)
