[project]
name = "bukscs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crispy-tailwind==1.0.3",
    "django>=6.0.4",
    "django-anymail==11.0.1",
    "django-crispy-forms==2.2",
    "django-debug-toolbar==4.4.2",
    "django-extensions==3.2.3",
    "django-filter==24.2",
    "django-phonenumber-field==8.0.0",
    "django-redis==5.4.0",
    "django-simple-history==3.7.0",
    "django-storages==1.14.4",
    "djangorestframework>=3.17.1",
    "pdfplumber==0.11.2",
    "phonenumbers==8.13.39",
    "pillow==10.4.0",
    "psycopg2-binary==2.9.9",
    "pypdf==4.3.1",
    "python-decouple==3.8",
    "python-dotenv>=1.2.2",
    "whitenoise==6.7.0",
]
